# cx-agent-studio-ci-cd-deploy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/skills/cx-agent-studio-ci-cd-deploy/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: align-api-contract-and-endpoints.md  ci-cd-workflow-update.md  feature-development.md
.claude/homunculus/instincts/inherited/: cx-agent-studio-ci-cd-deploy-instincts.yaml
.claude/skills/cx-agent-studio-ci-cd-deploy/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: agent-evaluation.yml  cd-production.yml  cd-staging.yml  ci.yml
configs/agent_template/: environment.json
configs/environments/: dev.yaml  production.yaml  staging.yaml
configs/evaluation/: default.yaml  production_readiness.yaml
scripts/: deploy.sh  export_agent.sh  import_agent.sh  setup_gcp.sh  validate_agent.sh
src/: __init__.py  agent_manager.py  auth.py  cli.py  config.py  evaluation.py
tests/: conftest.py  test_agent_manager.py  test_auth.py  test_config.py  test_evaluation.py
